cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS " -lrt -lm")
add_executable(algo-accumulate1 accumulate1.cpp)
add_executable(algo-adjacentdiff1 adjacentdiff1.cpp)
add_executable(algo-adjacentfind1 adjacentfind1.cpp)
add_executable(algo-allanynone1 allanynone1.cpp)
add_executable(algo-binarysearch1 binarysearch1.cpp)
add_executable(algo-bounds1 bounds1.cpp)
add_executable(algo-copy1 copy1.cpp)
add_executable(algo-copy2 copy2.cpp)
add_executable(algo-copy3 copy3.cpp)
add_executable(algo-count1 count1.cpp)
add_executable(algo-equal1 equal1.cpp)
add_executable(algo-equalrange1 equalrange1.cpp)
add_executable(algo-fill1 fill1.cpp)
add_executable(algo-find1 find1.cpp)
add_executable(algo-find2 find2.cpp)
add_executable(algo-findend1 findend1.cpp)
add_executable(algo-findof1 findof1.cpp)
add_executable(algo-foreach1 foreach1.cpp)
add_executable(algo-foreach2 foreach2.cpp)
add_executable(algo-foreach3 foreach3.cpp)
add_executable(algo-generate1 generate1.cpp)
add_executable(algo-heap1 heap1.cpp)
add_executable(algo-includes1 includes1.cpp)
add_executable(algo-innerproduct1 innerproduct1.cpp)
add_executable(algo-inplacemerge1 inplacemerge1.cpp)
add_executable(algo-iota1 iota1.cpp)
add_executable(algo-isheap1 isheap1.cpp)
add_executable(algo-ispartitioned1 ispartitioned1.cpp)
add_executable(algo-ispermutation1 ispermutation1.cpp)
add_executable(algo-issorted1 issorted1.cpp)
add_executable(algo-lexicocmp1 lexicocmp1.cpp)
add_executable(algo-merge1 merge1.cpp)
add_executable(algo-minmax1 minmax1.cpp)
add_executable(algo-mismatch1 mismatch1.cpp)
add_executable(algo-move1 move1.cpp)
add_executable(algo-nthelement1 nthelement1.cpp)
add_executable(algo-partialsort1 partialsort1.cpp)
add_executable(algo-partialsort2 partialsort2.cpp)
add_executable(algo-partialsum1 partialsum1.cpp)
add_executable(algo-partition1 partition1.cpp)
add_executable(algo-partitioncopy1 partitioncopy1.cpp)
add_executable(algo-permutation1 permutation1.cpp)
add_executable(algo-randomshuffle1 randomshuffle1.cpp)
add_executable(algo-relabs1 relabs1.cpp)
add_executable(algo-remove1 remove1.cpp)
add_executable(algo-remove2 remove2.cpp)
add_executable(algo-replace1 replace1.cpp)
add_executable(algo-replace2 replace2.cpp)
add_executable(algo-reverse1 reverse1.cpp)
add_executable(algo-rotate1 rotate1.cpp)
add_executable(algo-rotate2 rotate2.cpp)
add_executable(algo-search1 search1.cpp)
add_executable(algo-search2 search2.cpp)
add_executable(algo-searchn1 searchn1.cpp)
add_executable(algo-shuffle1 shuffle1.cpp)
add_executable(algo-sort1 sort1.cpp)
add_executable(algo-sort2 sort2.cpp)
add_executable(algo-sorted1 sorted1.cpp)
add_executable(algo-swapranges1 swapranges1.cpp)
add_executable(algo-transform1 transform1.cpp)
add_executable(algo-transform2 transform2.cpp)
add_executable(algo-unique1 unique1.cpp)
add_executable(algo-unique2 unique2.cpp)
add_executable(algo-unique3 unique3.cpp)
