cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS " -lrt -lm")
add_executable(concurrency-async1 async1.cpp)
add_executable(concurrency-async2 async2.cpp)
add_executable(concurrency-async3 async3.cpp)
add_executable(concurrency-atomics1 atomics1.cpp)
add_executable(concurrency-condvar1 condvar1.cpp)
add_executable(concurrency-condvar2 condvar2.cpp)
add_executable(concurrency-mutex1 mutex1.cpp)
add_executable(concurrency-promise1 promise1.cpp)
add_executable(concurrency-sharedfuture1 sharedfuture1.cpp)
add_executable(concurrency-thread1 thread1.cpp)
