cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
add_executable(cont-array1 array1.cpp)
add_executable(cont-cstylearray1 cstylearray1.cpp)
add_executable(cont-cstylearray1old cstylearray1old.cpp)
add_executable(cont-deque1 deque1.cpp)
add_executable(cont-forwardlist1 forwardlist1.cpp)
add_executable(cont-forwardlistfind1 forwardlistfind1.cpp)
add_executable(cont-forwardlistsplice1 forwardlistsplice1.cpp)
add_executable(cont-hashfunc1 hashfunc1.cpp)
add_executable(cont-hashfunc2 hashfunc2.cpp)
add_executable(cont-list1 list1.cpp)
add_executable(cont-map1 map1.cpp)
add_executable(cont-map2 map2.cpp)
add_executable(cont-mapcmp1 mapcmp1.cpp)
add_executable(cont-mapfind1 mapfind1.cpp)
add_executable(cont-multimap1 multimap1.cpp)
add_executable(cont-multiset1 multiset1.cpp)
add_executable(cont-refsem1 refsem1.cpp)
add_executable(cont-refwrap1 refwrap1.cpp)
add_executable(cont-set1 set1.cpp)
add_executable(cont-setcmp1 setcmp1.cpp)
add_executable(cont-setrange1 setrange1.cpp)
add_executable(cont-sortset sortset.cpp)
add_executable(cont-sortvec sortvec.cpp)
add_executable(cont-unordinspect1 unordinspect1.cpp)
add_executable(cont-unordmultimap1 unordmultimap1.cpp)
add_executable(cont-unordmultiset1 unordmultiset1.cpp)
add_executable(cont-unordset1 unordset1.cpp)
add_executable(cont-vector1 vector1.cpp)
