cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
add_executable(contadapt-bitset1 bitset1.cpp)
add_executable(contadapt-bitset2 bitset2.cpp)
add_executable(contadapt-priorityqueue1 priorityqueue1.cpp)
add_executable(contadapt-queue1 queue1.cpp)
add_executable(contadapt-queue2 queue2.cpp)
add_executable(contadapt-stack1 stack1.cpp)
add_executable(contadapt-stack2 stack2.cpp)
