cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
add_executable(fo-bind1 bind1.cpp)
add_executable(fo-bind2 bind2.cpp)
add_executable(fo-compose3 compose3.cpp)
add_executable(fo-fopow1 fopow1.cpp)
add_executable(fo-foreach3 foreach3.cpp)
add_executable(fo-lambda2 lambda2.cpp)
add_executable(fo-lambda3 lambda3.cpp)
add_executable(fo-lambda4 lambda4.cpp)
add_executable(fo-lambda5 lambda5.cpp)
add_executable(fo-lambda6 lambda6.cpp)
add_executable(fo-removeif1 removeif1.cpp)
add_executable(fo-sequence1 sequence1.cpp)
add_executable(fo-sequence2 sequence2.cpp)
add_executable(fo-sort1 sort1.cpp)
