cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
add_executable(i18n-germanbool germanbool.cpp)
add_executable(i18n-loc1 loc1.cpp)
add_executable(i18n-loc2 loc2.cpp)
add_executable(i18n-moneymanipulator moneymanipulator.cpp)
add_executable(i18n-moneypunct moneypunct.cpp)
add_executable(i18n-numget numget.cpp)
add_executable(i18n-numput numput.cpp)
add_executable(i18n-timeget timeget.cpp)
add_executable(i18n-timeput timeput.cpp)
add_executable(i18n-wbuffer wbuffer.cpp)
add_executable(i18n-wstring2string wstring2string.cpp)
add_executable(i18n-wstring2utf8 wstring2utf8.cpp)
