cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
add_executable(io-cat1 cat1.cpp)
add_executable(io-cat2 cat2.cpp)
add_executable(io-charcat1 charcat1.cpp)
add_executable(io-charcat2 charcat2.cpp)
add_executable(io-copy1 copy1.cpp)
add_executable(io-copy2 copy2.cpp)
add_executable(io-countlines1 countlines1.cpp)
add_executable(io-fstream1 fstream1.cpp)
add_executable(io-fstream2 fstream2.cpp)
add_executable(io-ignore1 ignore1.cpp)
add_executable(io-ignore2 ignore2.cpp)
add_executable(io-inbuf1 inbuf1.cpp)
add_executable(io-io1 io1.cpp)
add_executable(io-outbuf1 outbuf1.cpp)
add_executable(io-outbuf1i18n outbuf1i18n.cpp)
add_executable(io-outbuf2 outbuf2.cpp)
add_executable(io-outbuf3 outbuf3.cpp)
add_executable(io-sstream1 sstream1.cpp)
add_executable(io-sstream2 sstream2.cpp)
add_executable(io-streambuffer1 streambuffer1.cpp)
add_executable(io-streambuffer2 streambuffer2.cpp)
add_executable(io-streamreadwrite1 streamreadwrite1.cpp)
add_executable(io-streamredirect1 streamredirect1.cpp)
add_executable(io-sum1 sum1.cpp)
add_executable(io-sum2 sum2.cpp)
add_executable(io-timemanipulator1 timemanipulator1.cpp)
