cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS " -lrt -lm")
add_executable(iter-advance1 advance1.cpp)
add_executable(iter-advance2 advance2.cpp)
add_executable(iter-assoiter1 assoiter1.cpp)
add_executable(iter-backinserter1 backinserter1.cpp)
add_executable(iter-distance1 distance1.cpp)
add_executable(iter-frontinserter1 frontinserter1.cpp)
add_executable(iter-inserter1 inserter1.cpp)
add_executable(iter-istreamiter1 istreamiter1.cpp)
add_executable(iter-itercategory1 itercategory1.cpp)
add_executable(iter-iterswap1 iterswap1.cpp)
add_executable(iter-ostreamiter1 ostreamiter1.cpp)
add_executable(iter-reviter1 reviter1.cpp)
add_executable(iter-reviter2 reviter2.cpp)
add_executable(iter-reviter3 reviter3.cpp)
add_executable(iter-reviter4 reviter4.cpp)
