cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
add_executable(num-complex1 complex1.cpp)
add_executable(num-complex2 complex2.cpp)
add_executable(num-dist1 dist1.cpp)
add_executable(num-gslice1 gslice1.cpp)
add_executable(num-indirectarray1 indirectarray1.cpp)
add_executable(num-maskarray1 maskarray1.cpp)
add_executable(num-random1 random1.cpp)
add_executable(num-random2 random2.cpp)
add_executable(num-slice1 slice1.cpp)
add_executable(num-valarray1 valarray1.cpp)
add_executable(num-valarray2 valarray2.cpp)
