cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
add_executable(stl-add1 add1.cpp)
add_executable(stl-algo1 algo1.cpp)
add_executable(stl-algo1old algo1old.cpp)
add_executable(stl-array1 array1.cpp)
add_executable(stl-assoarray1 assoarray1.cpp)
add_executable(stl-bind1 bind1.cpp)
add_executable(stl-copy1 copy1.cpp)
add_executable(stl-copy2 copy2.cpp)
add_executable(stl-copybug copybug.cpp)
add_executable(stl-deque1 deque1.cpp)
add_executable(stl-find1 find1.cpp)
add_executable(stl-fo1 fo1.cpp)
add_executable(stl-foreach1 foreach1.cpp)
add_executable(stl-foreach2 foreach2.cpp)
add_executable(stl-forwardlist1 forwardlist1.cpp)
add_executable(stl-ioiter1 ioiter1.cpp)
add_executable(stl-iterbug iterbug.cpp)
add_executable(stl-lambda1 lambda1.cpp)
add_executable(stl-list1 list1.cpp)
add_executable(stl-list1old list1old.cpp)
add_executable(stl-list2 list2.cpp)
add_executable(stl-multimap1 multimap1.cpp)
add_executable(stl-multiset1 multiset1.cpp)
add_executable(stl-prime1 prime1.cpp)
add_executable(stl-remove1 remove1.cpp)
add_executable(stl-remove2 remove2.cpp)
add_executable(stl-remove3 remove3.cpp)
add_executable(stl-remove4 remove4.cpp)
add_executable(stl-reviter1 reviter1.cpp)
add_executable(stl-set1 set1.cpp)
add_executable(stl-sort1 sort1.cpp)
add_executable(stl-sort2 sort2.cpp)
add_executable(stl-transform1 transform1.cpp)
add_executable(stl-unordmap1 unordmap1.cpp)
add_executable(stl-unordmultiset1 unordmultiset1.cpp)
add_executable(stl-unordmultiset2 unordmultiset2.cpp)
add_executable(stl-vector1 vector1.cpp)
