cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
add_executable(string-icstring1 icstring1.cpp)
add_executable(string-string1 string1.cpp)
add_executable(string-string2 string2.cpp)
add_executable(string-string3 string3.cpp)
add_executable(string-stringiter1 stringiter1.cpp)
add_executable(string-stringiter2 stringiter2.cpp)
add_executable(string-stringnumconv1 stringnumconv1.cpp)
