cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS " -lrt -lm")
add_executable(util-chrono1 chrono1.cpp)
add_executable(util-chrono2 chrono2.cpp)
add_executable(util-clock1 clock1.cpp)
add_executable(util-enableshared1 enableshared1.cpp)
add_executable(util-limits1 limits1.cpp)
add_executable(util-minmax1 minmax1.cpp)
add_executable(util-pair1 pair1.cpp)
add_executable(util-ratio1 ratio1.cpp)
add_executable(util-sharedptr1 sharedptr1.cpp)
add_executable(util-sharedptr2 sharedptr2.cpp)
add_executable(util-sharedptr3 sharedptr3.cpp)
add_executable(util-timepoint1 timepoint1.cpp)
add_executable(util-tuple1 tuple1.cpp)
add_executable(util-tuple2 tuple2.cpp)
add_executable(util-uniqueptr1 uniqueptr1.cpp)
add_executable(util-weakptr1 weakptr1.cpp)
add_executable(util-weakptr2 weakptr2.cpp)
